--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-.idea/
-.vscode/
-node_modules/
+node_modules
 build
 .DS_Store
-*.tgz
-my-app*
-template/src/__tests__/__snapshots__/
-lerna-debug.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/.changelog
