--- a/package.json
+++ b/package.json
@@ -1,30 +1,37 @@
 {
-  "private": true,
+  "name": "react-redux-helloworld",
+  "version": "1.0.0",
+  "description": "Hello, World! app in React and Redux",
+  "main": "index.js",
   "scripts": {
-    "build": "node packages/react-scripts/scripts/build.js",
-    "changelog": "lerna-changelog",
-    "create-react-app": "tasks/cra.sh",
-    "e2e": "tasks/e2e-simple.sh",
-    "postinstall": "lerna bootstrap",
-    "publish": "tasks/release.sh",
-    "start": "node packages/react-scripts/scripts/start.js",
-    "test": "node packages/react-scripts/scripts/test.js --env=jsdom",
-    "format": "prettier --trailing-comma es5 --single-quote --write 'packages/*/*.js' 'packages/*/!(node_modules)/**/*.js'",
-    "precommit": "lint-staged"
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "start": "node server.js"
+  },
+  "author": "Vaibhav Mule",
+  "license": "MIT",
+  "dependencies": {
+    "babel-polyfill": "^6.7.4",
+    "babel-runtime": "^6.6.1",
+    "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.4",
+    "redux": "^3.4.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.16.1",
-    "eslint-plugin-react": "^6.10.3",
-    "husky": "^0.13.2",
-    "lerna": "2.0.0-beta.38",
-    "lerna-changelog": "^0.2.3",
-    "lint-staged": "^3.3.1",
-    "prettier": "^0.21.0"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --trailing-comma es5 --single-quote --write",
-      "git add"
-    ]
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "webpack": "^1.12.15",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
